# churf

./: .gitignore  CHANGELOG.md  Grammar.cf  Grammar.tex  Justfile  LICENSE  Makefile  README.md  Session.vim  \  basic-2  benchmark.py  benchmark.txt  cabal.project.local~  churf  churf.cabal  fourmolu.yaml  language  language.cabal  llvm.ll  pipeline.txt  shell.nix  spec.txt  test.crf  test_map2.ll  test_program  test_program.chf  test_program.crf
demo/: lambda_calculus  lambda_calculus.crf  lambda_calculus.ll  lambda_calculus.sh  lc  quicksort  quicksort.crf  quicksort.sh  rank2  rank4  rank4.crf
sample-programs/: Main.hs  PriorityQueue.crf  Quicksort.crf  basic-0  basic-0.crf  basic-1  basic-1.crf  basic-10  basic-10.crf  basic-2  basic-2.crf  basic-3  basic-4  basic-5  basic-5.crf  basic-6  basic-6.crf  basic-7  basic-7.crf  basic-8  basic-8.crf  basic-9  basic-9.crf  bubble-sort.chrf  eta_test1.crf  eta_test2.crf  good1  insertion-sort.chrf  lambda_and_foldr.crf  lambda_calculus-2.crf  lambda_calculus.crf  loop.crf  lt_testing.crf  mono-1.crf  mono-2.crf  mono-3.crf  mono-4.chrf  mono.crf
sample-programs/example-programs/: ex1.crf  ex2.crf  ex3.crf  ex4.crf  ex5.crf  ex6.crf
sample-programs/sample-programs/: basic-1.sf  basic-2.sf  basic-3.sf  basic-4.sf  basic-5.sf  basic-6.sf  basic-7.sf  basic-8.sf  basic-9.sf
sample-programs/working/: STLC.crf  addition.crf  apply.crf  closure.crf  foldr.crf  higher-rank-monomorphization.crf  higher-rank-monomorphization.mz  higher-rank.crf  lambda-2.crf  lambda.crf  lambda_calculus-2.crf  let.crf  map.crf  presentation.crf  quicksort.crf  rank2.crf  rank4.crf  simple.crf
src/: Abs.hs  AnnForall.hs  Auxiliary.hs  Collector.cpp  Compiler.hs  Expander.hs  Interpreter.hs  LambdaLifter.hs  LambdaLifterIr.hs  LlvmIr.hs  Main.hs  MarkSweep.cpp  NewAbs.hs  OrderDefs.hs  Postlude.hs  Renamer.hs  ReportForall.hs  TreeConverter.hs  TypeChecker.hs  TypeCheckerIr.hs
src/Accurate_GC/: Makefile  gc.cpp  gc_printer.cpp  sample.ll  shadow_stack.cpp
src/CaseDesugar/: CaseDesugar.hs  CaseDesugarIr.hs
src/Codegen/: Auxillary.hs  Codegen.hs  CompilerState.hs  Emits.hs  LlvmIr.hs
src/Compiler/: Compiler.hs  LLVMIr.hs  StandardLLVMLibrary.hs  TH.hs  standard_library.ll
src/Desugar/: Desugar.hs
src/GC/: Makefile  allocator.cpp  heap.cpp  todo.md
src/GC/docs/: benchmarking.md  heap.md  ref-guide.md
src/GC/docs/lib/: cheap.md  chunk.md  event.md  heap.md  profiler.md
src/GC/include/: allocator.hpp  cheap.h  chunk.hpp  event.hpp  heap.hpp  heap_obj.hpp  profiler.hpp
src/GC/lib/: cheap.cpp  event.cpp  heap.cpp  heap_old.cpp  profiler.cpp
src/GC/tests/: MarkSweep.cpp  advance.cpp  alloc_free.cpp  alloc_free_list.cpp  events.cpp  extern_lib.cpp  file.cpp  game.cpp  h_test.cpp  linkedlist.cpp  linker.cpp  player.hpp  pointers.cpp  revrange.cpp  stack.cpp  stack2.cpp  struct_test.cpp  wrapper.c  wrapper_test.c
src/GC/tests/h_test.out.dSYM/Contents/: Info.plist
src/GC/tests/h_test.out.dSYM/Contents/Resources/DWARF/: h_test.out
src/Grammar/: Abs.hi  Abs.hs  Doc.txt  ErrM.hs  Lex.hi  Lex.hs  Par.hi  Par.hs  Par.info  Print.hi  Print.hs  Skel.hi  Skel.hs  Test.hi  Test.hs
src/LambdaLifter/: LambdaLifter.hs
src/Monomorpher/: Monomorpher.hs  MonomorpherIr.hs
src/Monomorphizer/: DataTypeRemover.hs  Monomorphizer.hs  Monomorphizer2.hs  MonomorphizerIr.hs  MorbIr.hs
src/Rename/: Renamer.hs
src/Renamer/: Renamer.hs  RenamerIr.hs  RenamerM.hs  RenamerOld.hs
src/TypeChecker/: AlgoW.hs  Bugs.md  CheckInj.hs  HM.hs  HMIr.hs  RemoveForall.hs  RemoveTEVar.hs  ReportTEVar.hs  TypeChecker.hs  TypeCheckerBidir.hs  TypeCheckerHm.hs  TypeCheckerIr.hs  Unification.hs
test/: helloworld.ll  simple.sf  simple_goal.ll  simple_goal.s  test_program.sf
tests/: DoStrings.hs  Main.hs  TestAnnForall.hs  TestLambdaLifter.hs  TestRenamer.hs  TestReportForall.hs  TestTypeCheckerBidir.hs  TestTypeCheckerHm.hs  Tests.hs
tests/TypecheckingHM/: DoStrings.hs  Tests.hs
