cabal-version:      3.0

name:               language

version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             bachelor-group-66-systemf
maintainer:         sebastian.selander@gmail.com
category:           Language
build-type:         Simple

extra-doc-files:    CHANGELOG.md

extra-source-files:
  Grammar.cf

common warnings
    ghc-options: -W

executable language
    import:           warnings

    main-is:          Main.hs

    other-modules:
      Grammar.Abs
      Grammar.Lex
      Grammar.Par
      Grammar.Print
      Grammar.Skel
      Grammar.ErrM
      Auxiliary
      TypeChecker.TypeChecker
      TypeChecker.TypeCheckerIr
      Monomorpher.Monomorpher
      Monomorpher.MonomorpherIr
      Renamer.Renamer
      LambdaLifter.LambdaLifter
      Codegen.Codegen
      Codegen.LlvmIr

    hs-source-dirs:   src

    build-depends:    
        base >=4.16
      , mtl
      , containers
      , either
      , extra
      , array
      , QuickCheck

    default-language: GHC2021

Test-suite language-testsuite
    type: exitcode-stdio-1.0
    main-is: Tests.hs

    other-modules:
      Grammar.Abs
      Grammar.Lex
      Grammar.Par
      Grammar.Print
      Grammar.Skel
      Grammar.ErrM
      Auxiliary
      TypeChecker.TypeChecker
      TypeChecker.TypeCheckerIr
      Monomorpher.Monomorpher
      Monomorpher.MonomorpherIr
      Renamer.Renamer

    hs-source-dirs: src, tests

    build-depends: 
        base >=4.16
      , mtl
      , containers
      , either
      , extra
      , array
      , QuickCheck

    default-language: GHC2021
