cabal-version:      3.4

name:               language

version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             bachelor-group-66-systemf
maintainer:         sebastian.selander@gmail.com
category:           Language
build-type:         Simple

extra-doc-files:    CHANGELOG.md

extra-source-files:
  Grammar.cf

common warnings
    ghc-options: -W

executable language
    import:           warnings

    main-is:          Main.hs
    
    other-modules:
      Grammar.Abs
      Grammar.Lex
      Grammar.Par
      Grammar.Print
      Grammar.Skel
      Grammar.ErrM
      Auxiliary
      TypeChecker.TypeChecker
      TypeChecker.TypeCheckerIr
      Monomorphizer.Monomorphizer
      Monomorphizer.MonomorphizerIr
      Renamer.Renamer
      Codegen.Codegen
      Codegen.LlvmIr
      TreeConverter

    hs-source-dirs:   src

    build-depends:    
        base >=4.16
      , mtl
      , containers
      , either
      , extra
      , array
      , hspec
      , QuickCheck
      , directory
      , process

    default-language: GHC2021

Test-suite language-testsuite
    type: exitcode-stdio-1.0
    main-is: Tests.hs

    other-modules:
      Grammar.Abs
      Grammar.Lex
      Grammar.Par
      Grammar.Print
      Grammar.Skel
      Grammar.ErrM
      Auxiliary
      TypeChecker.TypeChecker
      TypeChecker.TypeCheckerIr
      Monomorpher.Monomorpher
      Monomorpher.MonomorpherIr
      Renamer.Renamer
      Compiler

    hs-source-dirs: src, tests, tests/TypecheckingHM

    build-depends: 
        base >=4.16
      , mtl
      , containers
      , either
      , extra
      , array
      , hspec
      , QuickCheck
      , process
      , bytestring
      , hspec

    default-language: GHC2021

