cabal-version:      3.4

name:               language

version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             bachelor-group-66-systemf
maintainer:         sebastian.selander@gmail.com
category:           Language
build-type:         Simple

extra-doc-files:    CHANGELOG.md

extra-source-files:
  Grammar.cf

common warnings
    ghc-options: -w

executable language
    import:           warnings

    main-is:          Main.hs
    
    other-modules:
      Grammar.Abs
      Grammar.Lex
      Grammar.Par
      Grammar.Print
      Grammar.Skel
      Grammar.ErrM
      Grammar.ErrM
      Grammar.Layout
      Auxiliary
      Renamer.Renamer
      TypeChecker.TypeChecker
      Expander
      AnnForall
      OrderDefs
      TypeChecker.TypeCheckerHm
      TypeChecker.TypeCheckerBidir
      TypeChecker.TypeCheckerIr
      TypeChecker.ReportTEVar
      TypeChecker.RemoveForall
      LambdaLifter
      LambdaLifterIr
      Monomorphizer.Monomorphizer
      Monomorphizer.MonomorphizerIr
      Monomorphizer.MorbIr
      Monomorphizer.DataTypeRemover
      Codegen.Codegen
      Codegen.LlvmIr
      Codegen.Auxillary
      Codegen.CompilerState
      Codegen.Emits
      Compiler
      Renamer.Renamer
      ReportForall
      Desugar.Desugar

    hs-source-dirs:   src

    build-depends:    
        base >=4.16
      , mtl
      , containers
      , either
      , extra
      , array
      , hspec
      , QuickCheck
      , directory
      , process

    default-language: GHC2021

Test-suite language-testsuite
    type: exitcode-stdio-1.0
    main-is: Main.hs

    other-modules:
      TestTypeCheckerBidir
      TestTypeCheckerHm
      TestAnnForall
      TestReportForall
      TestRenamer
      TestLambdaLifter
      DoStrings

      Grammar.Abs
      Grammar.Lex
      Grammar.Par
      Grammar.Print
      Grammar.Skel
      Grammar.ErrM
      Grammar.Layout
      OrderDefs
      Auxiliary
      Monomorphizer.Monomorphizer
      Monomorphizer.Monomorphizer2
      Monomorphizer.MonomorphizerIr
      Renamer.Renamer
      TypeChecker.TypeChecker
      AnnForall
      ReportForall
      LambdaLifterIr
      LambdaLifter
      TypeChecker.TypeCheckerHm
      TypeChecker.TypeCheckerBidir
      TypeChecker.ReportTEVar
      TypeChecker.RemoveForall
      TypeChecker.TypeCheckerIr
      Compiler

    hs-source-dirs: src, tests

    build-depends: 
        base >=4.16
      , mtl
      , containers
      , either
      , extra
      , array
      , hspec
      , QuickCheck
      , process
      , bytestring
      , hspec
      , directory

    default-language: GHC2021

